<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
	    <TextView
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:text="@string/name_l"
	        />
	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:text="@string/phone_l"
	        />
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/amount_l"
	        />
	</LinearLayout>
    
	<ListView 
	    android:id="@+id/listview"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    ></ListView>
    
</LinearLayout>
