<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />
	<EditText 
		android:id="@+id/name"
		android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age" />
	<EditText 
		android:id="@+id/age"
		android:hint="@string/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    />
    
	<Button 
	  	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:text="@string/save"
        android:onClick="OnSaveBtnClick"
	    />
</LinearLayout>
